report contains the two longest SMO run times now

--- a/Report/results.tex
+++ b/Report/results.tex
@@ -22,7 +22,10 @@ Each time we tested with ... 1000 (!!!!!!!!!!!) test points. The given training 
 Talk about average compute times. Or did Paul already say something about that beforehand? 
 
 ----->
-Sorry, haven't really tracked compute times consistently. Will, although, compute ecoc Gauss for 10000 training points again with what turned out (surprisingly) to be our fastest SMO (Namely WSS1, not WSS2 as I assumed.) Will be around 2 hours or so. Will give the exact figure. Then we can say at least how long the longest job took. Is that, combined with an extra benchmark section only focused on the comparison of the 5 SMOs applied to only the first of the  15 ECOC classifiers, both kernels, enough?
+Sorry, haven't really tracked compute times consistently. Although I can say this much: 
+ECOC linear 10000 points: 1 h 16 min
+ECOC Gauss 10000 points: 2 h 26 min
+So we can say at least how long the longest jobs took. Is that, combined with an extra benchmark section only focused on the comparison of the 5 SMOs applied to only the first of the  15 ECOC classifiers, both kernels, enough?
 
 
 Talk about the 1500 issue or better not?
