--- a/Report/multiclassification.tex
+++ b/Report/multiclassification.tex
@@ -1,8 +1,10 @@
-Support Vector Machines are binary classifiers, meaning that they only have two possible output labels. Often one chooses them to be $1$ and $-1$. Our problem however was to classify unknown data into one out of $10$ different categories. Since there is no direct way to change one support vector machine so that it can choose from more than two labels we had to find a way to combine several SVMs, who together would be able to do so. There are a number of well known strategies tackling this issue. Let us first look at a very intuitive but also primitive approach called One-vs-All classification. Using this method one trains as many SVMs as one has classes, so $10$ in our case, and sets labels such that the $i$-th SVM has all training data with label $i$ set to one and everything else to $-1$. When trying to predict a new label one simply looks for a classifier that gave this data point the label one. Unfortunately this approach has many issues. First of all new data points are generally not uniquely classified. Therefore it is necessary to add some sort of confidence score which label is considered to be most likely out of the possible ones. Finding good ways of assigning reliable confidence scores is often not an easy task. We decided to resolve this issue by computing the barycenters of each class and when ambiguities arose chose the label of the closest barycenter. This simple strategy notably improved our results and we decided on not devoting any more time on a different strategy because the One-vs-All classification has another major drawback. The number of training points for each classifier being assigned positive and negative labels is very unbalanced, in our case on average $1$ to $9$. Therefore one is likely to get shifted margins to what one would normally perceive to be correct. The penalty term will lead each classifier to give less importance to the positives than the negatives simply because they are less in numbers and can be outweighed by the others. \\ \\ Bild hier oder zu unwichtig? \\  \\ Another common intuitive approach would be the One-vs-One classification. Here during training one only ever considers the data corresponding to two classes and sets one label to $1$ and the other one to $-1$ for every possible pair. 
-In our case this would mean training $45$ (the number arises from the binomial coefficient of $10$ choose $2$) different SVMs however with data sets of a fifth of the original size. Because the issue of how to deal with ambiguities gets even worse we decided not to implement this approach and instead focus our attention on a different strategy that seemed like a much better idea to us and indeed as the next chapter will reveal, yielded very good results:
+Support Vector Machines are binary classifiers, meaning that they only have two possible output labels. Often one chooses them to be $1$ and $-1$. Our problem however was to classify unknown data into one out of ten different categories. Since there is no direct way to change one support vector machine so that it can choose from more than two labels we had to find a way to combine several SVMs, who together would be able to do so. There are a number of well known strategies tackling this issue. Let us first look at a very intuitive but also primitive approach called One-vs-All classification. Using this method one trains as many SVMs as there are classes, so ten in our case, and sets labels such that the $i$-th SVM has all training data with label $i$ set to 1 and everything else to $-1$. When trying to predict a new label, one simply looks for a classifier that gave this data point the label 1. Unfortunately, this approach has many issues. First of all, new data points are generally not uniquely classified. Therefore, it is necessary to add some sort of confidence score that signals which label is considered to be most likely out of the possible ones. Finding good ways of assigning reliable confidence scores is often not an easy task. We decided to resolve this issue by computing the barycenters of each class, and when ambiguities arose, we chose the label of the closest barycenter. This simple strategy notably improved our results and we decided on not devoting any more time to a different strategy because the One-vs-All classification has another major drawback. The number of training points for each classifier being assigned positive and negative labels is very unbalanced, in our case on average $1$ to $9$. Therefore, one is likely to get shifted margins to what one would normally perceive to be correct. Since the negative class is simply greater in size, the penalty term will draw more attention towards avoiding points with negative label inside the margin.\\ 
 
-\subsection{Error Correcting Output Codes}
-They are easiest to explain considering a concrete example. We trained 15 different classifiers $f_i$. The rows of the table show what class is assigned what label depending on each classifier. For example $f_0$ assigns $1$'s to all even numbers and $-1$'s to all odd numbers. This way each class has a string or codeword of $1$'s and $-1$'s it corresponds to.
+Another common intuitive approach would be the One-vs-One classification. Here, during training one only ever considers the data corresponding to two classes and sets one label to $1$ and the other one to $-1$ for every possible pair. 
+In our case this would mean training $\binom{10}{2} =45$ different SVMs however with data sets of a fifth of the original size. Because here, the issue of how to deal with ambiguities gets even worse, we decided not to implement this approach and instead focus our attention on a different strategy that seemed like a much better idea to us. And indeed, as the next chapter will reveal, this yielded very good results.
+
+\subsection{Error-Correcting Output Codes}
+Error-correcting output codes (ECOC) are easiest to explain considering a concrete example. We trained 15 different classifiers $f_i$. The rows of the table show what class is assigned which label depending on each classifier. For example $f_0$ assigns $1$ to all even numbers and $-1$ to all odd numbers. This way, each class has a string or code word consisting of $1$'s and $-1$'s it corresponds to.
 
 \begin{table}[ht!]
 	\centering
@@ -24,6 +26,6 @@ They are easiest to explain considering a concrete example. We trained 15 differ
 	\end{tabular}
 \end{table}  
 
-The codewords are chosen such that their Hamming distance (i.e. the number of entries where they differ) is maximized. In our case each codeword has a Hamming distance of at least six to any of the others strings. Now when one wants to label an unknown data point each of the classifiers assigns it a label and one gets an output string of 15 digits. We classify the data point according the codeword it has the least Hamming distance to. The name Error Correcting Output Codes is derived from the fact that for example any three classifiers can misclassify a data point and we will still get the correct result. Depending on the difficulty of the problem one could choose more or less classifiers and hece in-or decrease the Hamming distance of the set of codewords. We took this idea as well as the codewords given above from \cite{dietterich1995solving}.
+The code words are chosen such that their Hamming distance (i.e.\ the number of entries where they differ) is maximized. In our case, each code word has a Hamming distance of at least six to any of the others strings. Now, when one wants to label an unknown data point, each of the classifiers assigns it a label and one eventually gets an output string of 15 digits. We classify the data point according the code word it has the least Hamming distance to. The name \textit{Error Correcting Output Codes} is derived from the fact that for example any three classifiers can misclassify a data point and the algorithm still outputs the correct result. Depending on the difficulty of the problem one could choose more or less classifiers and hece in- or decrease the Hamming distance of the set of code words. We took this idea as well as the code words given above from \cite{dietterich1995solving}.
 
 
