updated results section

--- a/Report/Report_template.tex
+++ b/Report/Report_template.tex
@@ -21,6 +21,8 @@
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage[export]{adjustbox}
 \usepackage{pdfpages}
+%to make writing look like code, use \texttt{This is Courier font.} command
+\usepackage{courier}
 % deutsches Literaturverzeichnis
 \usepackage[numbers,round]{natbib}
 
