mit Pauls Referenzen

--- a/Report/Presentation.tex
+++ b/Report/Presentation.tex
@@ -11,7 +11,7 @@
 %\usepackage[main=german]{babel}  
 %\usemintedstyle{trac}
 \usepackage[utf8]{inputenc}
-\usepackage[sfdefault]{ClearSans} %% option 'sfdefault' activates Clear Sans as the default text font
+%\usepackage[sfdefault]{ClearSans} %% option 'sfdefault' activates Clear Sans as the default text font
 \usepackage[T1]{fontenc}
 
 
