--- a/Report/Report_bib.bib
+++ b/Report/Report_bib.bib
@@ -23,3 +23,50 @@
 	year={1995}
 }
 
+@Article{Keerthi2002,
+	author="Keerthi, S.S.
+	and Gilbert, E.G.",
+	title="Convergence of a Generalized SMO Algorithm for SVM Classifier Design",
+	journal="Machine Learning",
+	year="2002",
+	month="Jan",
+	day="01",
+	volume="46",
+	number="1",
+	pages="351--360",
+	abstract="Convergence of a generalized version of the modified SMO algorithms given by Keerthi et al. for SVM classifier design is proved. The convergence results are also extended to modified SMO algorithms for solving $\nu$-SVM classifier problems.",
+	issn="1573-0565",
+}
+
+@article{KeerthiShevade,
+	author =  "S. S. Keerthi  and  S. K. Shevade  and  C. Bhattacharyya  and  K. R. K. Murthy" ,
+	title = "Improvements to Platt's SMO Algorithm for SVM Classifier Design",
+	journal = "Neural Computation",
+	volume = "13",
+	number = "3",
+	pages = "637-649",
+	year = "2001",
+	}
+	
+@inproceedings{Platt1998SequentialMO,
+title={Sequential minimal optimization: A fast Algorithm for Training Support Vector machines},
+author={John C. Platt and John Platt},
+year={1998}
+}
+
+@article{FanChenLin,
+	author = {Fan, Rong-En and Chen, Pai-Hsuen and Lin, Chih-Jen},
+	title = {Working Set Selection Using Second Order Information for Training Support Vector Machines},
+	journal = {J. Mach. Learn. Res.},
+	issue_date = {12/1/2005},
+	volume = {6},
+	month = dec,
+	year = {2005},
+	issn = {1532-4435},
+	pages = {1889--1918},
+	numpages = {30},
+	acmid = {1194907},
+	publisher = {JMLR.org},
+} 
+
+
