Report mini veraenderung

--- a/Report/Report_template.tex
+++ b/Report/Report_template.tex
@@ -21,14 +21,10 @@
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage[export]{adjustbox}
 \usepackage{pdfpages}
-%to make writing look like code, use \texttt{This is Courier font.} command
-\usepackage{courier}
 % deutsches Literaturverzeichnis
 \usepackage[numbers,round]{natbib}
+\usepackage{diagbox}
 
-%neue Seite für jedes Kapitel
-%\usepackage{titlesec}
-%\newcommand{\sectionbreak}{\clearpage}
 
 % Umgebungen für Definitionen, Sätze, usw.
 % Es werden Sätze, Definitionen etc innerhalb eines Chapters mit
@@ -58,7 +54,7 @@
 \DeclareMathOperator{\argmin}{argmin}
 
 \begin{document}
-
+\setlength\parindent{0pt}
   % Keine Seitenzahlen im Vorspann
   \pagestyle{empty}
 \noindent
